# Vector2

./: .gitignore  CMakeLists.txt  ToDo.md  makefile
inc/: Angle.hpp  Interpolation.hpp  ToDo.md  Vector2.hpp
src/: main.cpp  utests.cpp
