cmake_minimum_required(VERSION 3.28)

project(Vector2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-Wall -Wextra -Wpedantic)
add_link_options(-static-libgcc -static-libstdc++)

if(IS_DIRECTORY submodules/googletest)
    message("googletest directory found, unit testing ENABLED")
    enable_testing()
    add_subdirectory(submodules/googletest)
    include_directories(submodules/googletest/include)
    add_executable(utests src/utests.cpp)
    target_link_libraries(utests PRIVATE gtest)
    include(GoogleTest)
    gtest_discover_tests(utests)
else()
    message("No googletest directory found, unit testing DISABLED")
endif()
